# crimea-transfer

./: .dockerignore  .env.example  .gitignore  1.txt  Dockerfile  Plan.txt  README.md  log_auto.txt  middleware.ts  next-auth.d.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  tsconfig.json  vercel.json  yc-key.json
.github/: SECRETS_INSTRUCTIONS.md
.github/workflows/: deploy.yml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
app/admin/: page.tsx
app/booking/: page.tsx
app/bookings/: page.tsx
app/components/: CarSelector.tsx  Footer.tsx  Navigation.tsx  PhotoUpload.tsx  PriceCalculator.tsx  RouteGuard.tsx  Skeleton.tsx  Toast.tsx
app/dispatcher/: page.tsx
app/driver/: page.tsx
app/terms/: page.tsx
lib/: audit.ts  auth-helpers.ts  auth.ts  csrf.ts  jwt.ts  notifications.ts  pagination.ts  plusofon.ts  prisma.ts  rate-limit.ts  route-config.ts  smspilot.ts  useAuth.ts  verification-store.ts  websms.ts  yookassa.ts
prisma/: schema.prisma
prisma/migrations/: 20260717_add_car_classes_and_revenue_adjustments.sql
public/: manifest.json
public/data/: cars.json
scripts/: fix-pin-nullable.js  migrate-payment.js  set-admin-password.ts
supabase/: seed.sql
supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_verification_token.sql  004_full_sync.sql  004a_drop.sql  004b_tables.sql  004c_tables2.sql  004d_seed.sql  20250714_add_password_hash.sql  20250714_driver_cabinet.sql  20260716_add_refreshtoken.sql  (+3 more)
types/: next-auth.d.ts
(+62 files in other folders)
